404页面加部分前端

--- a/catalog/view/theme/default/address.html
+++ b/catalog/view/theme/default/address.html
@@ -8,13 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>LOGIN</title>
+		<title>ADDRESS</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
 			<div class="nav content clearfix">
-				
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -205,90 +204,203 @@
 			</div>
 		
 		</div>
-		<!--banner-->
-		
-		
-		<div class="login in_content clearfix">
-			<div class="text clearfix">
-				<div class="top">
-					<ol class="login_ol clearfix">
-						<li class="active">SIGN IN <span></span></li>
-						<li>SIGN UP</li>
-					</ol>
-				</div>
-				<div class="bot">
-					<ul class="login_ul clearfix">
+		<!--内容-->
+		<div class="address clearfix">
+			<div class="content in_content address_content clearfix">
+				
+				<div class="left clearfix">
+					<ol class="top_ol liucheng clearfix">
 						<li class="active">
-							<p class="bt_p">Returning Customer</p>
-							<form class="login_form lr_form">
-								<label for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email1" type="text" />
-									<p class="ts_p">The email address you entered is incorrect</p>
-								</label>
-								<label for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass1" type="password"/>
-									<p class="ts_p">The password you entered is incorrect</p>
-									<a href="###">Forgotten Password ?</a>
-								</label>
-								<input class="tj_input" type="submit" value="SIGN IN" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
-							</div>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>1.Shipping</p>
+							<em class="emr"></em>
 						</li>
 						<li>
-							<p class="bt_p">New Customers</p>
-							<form class="res_form lr_form">
-								<label class="clearfix label_name" for="">
-									<span>First Name <i class="red_i">*</i></span>
-									<input class="name name1" type="text" value="" />
-									<p class="ts_p">Please enter your first name</p>
-								</label>
-								<label class="clearfix label_names" for="">
-									<span>Last Name <i class="red_i">*</i></span>
-									<input class="name name2" type="text" value="" />
-									<p class="ts_p">Please enter your last name</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email2"  type="text"/>
-									<p class="ts_p">Please enter your email address</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass2" type="password"/>
-									<p class="ts_p">Please enter your password</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Confirm Password <i class="red_i">*</i></span>
-									<input class="pass pass3" type="password"/>
-									<p class="ts_p">Please confirm the password</p>
-								</label>
-								<div class="xy_div">
-									<input type="checkbox"/>
-									<span class="span1"></span>
-									<span class="span2"></span>
-									<p>I agree to Hot Beauty Hair <a href="###">Terms and Conditions.</a><i class="red_i">*</i></p>
-								</div>
-								<p class="xy_p">*required field</p>
-								
-								<input class="tj_input" type="submit" value="SIGN UP" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
-							</div>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>2.Payment</p>
+							<em class="eml"></em>
+							<em class="emr"></em>
 						</li>
-					</ul>
+						<li>
+							<img src="img/png/express.png" alt="" />
+							<span></span>
+							<p>3.Deliver</p>
+							<em class="eml"></em>
+						</li>
+					</ol>
+					
+					<div class="text clearfix">
+						<h2>Select the shipping address</h2>
+						<ul class="address_ul clearfix">
+							<li class="active clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
+							</li>
+							<li class="clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
+							</li>
+							<li class="clearfix">
+								<span>LIUBIHUI</span>
+								<p>A lane in jiangxia village, baiyun district</p>
+								<p>Guangzhou,Guangdong province</p>
+								<span>510000</span>
+								<span>China</span>
+								<a class="a_btn" href="###"></a>
+								<i></i>
+								<a class="go_btn" href="###">sent to this address&nbsp;&nbsp;&nbsp;></a>
+							</li>
+						</ul>
+						<a class="add_a" href="###">Add new address</a>
+						
+						<h3>Shipping Method</h3>
+						<ul class="express_ul">
+							<li class="clearfix">
+								<dl>
+									<dt>Shipping Method</dt>
+									<dd>
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<span>Nigeria Local Express </span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Expected delivery time</dt>
+									<dd>
+										<span>2-3 Working Days</span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Shipping Cost</dt>
+									<dd>
+										<span>$0.00</span>
+									</dd>
+								</dl>
+							</li>
+							<li class="clearfix">
+								<dl>
+									<dt>Shipping Method</dt>
+									<dd class="kd">
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<img src="img/jpg/kd_1.jpg"/>
+									</dd>
+									<dd class="kd">
+										<label for="" class="dx_label">
+											<input class="check_input" type="checkbox" />
+											<i class="check_i"></i>
+										</label>
+										<img src="img/jpg/kd_2.jpg"/>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Expected delivery time</dt>
+									<dd>
+										<span>2-3 Working Days</span>
+									</dd>
+								</dl>
+								<dl>
+									<dt>Shipping Cost</dt>
+									<dd>
+										<span>$0.00</span>
+									</dd>
+								</dl>
+							</li>
+						</ul>
+						
+					</div>
 					
 				</div>
+			
+				<div class="right clearfix">
+					<h2>SUMMARY</h2>
+					<ul class="cart_ul">
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src="img/jpg/index1_1.jpg"/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+						<li class="clearfix">
+							<a href="###">
+								<div class="pic_img">
+									<img src=""/>
+								</div>
+								<div class="text">
+									<h2>Fuller Peruvian Virgin Hair  </h2>
+	 								<p>Body Wavy</p>
+	 								<span>$15.39</span>
+								</div>
+							</a>
+						</li>
+					</ul>
+					<p class="p1">Shipping <span class="fr">$70.00</span></p>
+					<p class="p2">Total <span class="fr">$70.00</span></p>
+					<div class="shop_search">
+						<p>
+							If you have coupons, please fill them out. If not, 
+							please pay.
+						</p>
+						<label for="">
+							<input type="text" placeholder="coupon code"/>
+							<button>CONFIRM</button>
+						</label>
+					</div>
+					<div class="btn">
+						<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
+					</div>
+				</div>
+			
 			</div>
 		</div>
-	
-	
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -464,118 +576,29 @@
 			</ol>
 		</div>
 		
-	
 	</body>
 </html>
+
 <script>
 	$(function(){
-		$(".email").focus(function(){
-			$(this).attr("placeholder","Enter email address");
-		})
-		$(".email").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		$(".pass").focus(function(){
-			$(this).attr("placeholder","Please enter the password");
-		})
-		$(".pass").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		
-		$(".name").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z]+$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("Please fill in in English");
+		//单选
+		$(".dx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				
 			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".email").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The email address you entered is incorrect");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass").change(function(){
-			var text=$(this).val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass3").change(function(){
-			var text=$(this).val();
-			var pass_val = $(".pass2").val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else if(text!=pass_val){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The passwords you entered are not consistent. Please re-enter them");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
+				$(this).siblings(".check_i").removeClass("active");
 			}
 		})
 		
-		//注册提交
-		$(".res_form .tj_input").click(function(){
-			var name1 = $(".name1").val();
-			var name2 = $(".name2").val();
-			var email2 = $(".email2").val();
-			var pass2 = $(".pass2").val();
-			var pass3 = $(".pass3").val();
-			var bool = 0;
-			
-			$(".res_form .ts_p").each(function(){
-				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			if(bool == 1){
-				return false;
-			}else{
-				if((name1 !="")&&(name2 !="")&&(email2 !="")&&(pass2 !="")&&(pass3 !="")&&($(".xy_div input").hasClass("off"))){
-					//正确
-				}else{
-					alert("* required field")
-					return false;
-				}
-			}
+		$(".address_ul>li").click(function(){
+			$(this).addClass("active").siblings("li").removeClass("active");
 		})
 		
-		//登陆提交
-		$(".login_form .tj_input").click(function(){
-			var email1 = $(".email1").val();
-			var pass1 = $(".pass1").val();
-			var bool = 0;
-			
-			$(".login_form .ts_p").each(function(){
-				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			
-			if(bool == 1){
-				return false;
-			}else{
-				if((email1 !="")&&(pass1 !="")){
-					//正确
-				}else{
-					alert("* required field")
-					return false;
-				}
-			}
+		//搜索
+		$(".shop_search input").focus(function(){
+			$(".shop_search button").css("display","block");
 		})
-		
 	})
 </script>
+		
