--- a/catalog/view/theme/default/product_details.html
+++ b/catalog/view/theme/default/product_details.html
@@ -222,7 +222,7 @@
 							<li><img src="img/jpg/pro_det1.jpg"/></li>
 						</ol>
 						<div class="pro_big_img">
-							<div class="swiper-container" id="swiper3">
+							<div class="swiper-container"id="swiper3">
 							    <div class="swiper-wrapper">
 							      	<div class="swiper-slide ban_img">
 							      		<img src="img/jpg/pro_det1.jpg"/>
@@ -280,7 +280,7 @@
 											</ul>
 										</div>
 									</div>
-									<!-- <ul style="display: none;" class="clearfix">
+									<ul style="display: none;" class="clearfix">
 										<li class="active">12in 100g 1pc</li>
 										<li>12in 100g 1pc</li>
 										<li>12in 100g 1pc</li>
@@ -291,7 +291,7 @@
 										<li>12in 100g 1pc</li>
 										<li>12in 100g 1pc</li>
 									</ul>
- -->									
+									
 								</label>
 								<span class="measurement">
 									About Measurement
