--- a/catalog/view/theme/default/shopcart1.html
+++ b/catalog/view/theme/default/shopcart1.html
@@ -8,13 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>LOGIN</title>
+		<title>SHOPCART1</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
 			<div class="nav content clearfix">
-				
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -205,90 +204,285 @@
 			</div>
 		
 		</div>
-		<!--banner-->
-		
-		
-		<div class="login in_content clearfix">
-			<div class="text clearfix">
-				<div class="top">
-					<ol class="login_ol clearfix">
-						<li class="active">SIGN IN <span></span></li>
-						<li>SIGN UP</li>
-					</ol>
+		<!--内容-->
+		<div class="content in_content shopcart">
+			<div class="shop_content clearfix">
+				<div class="top clearfix">
+					<h1>MY WISHLIST</h1>
+					<p>Here you can see the hair in your Wishlist, make edits to your selection and add to your shopping cart.</p>
 				</div>
-				<div class="bot">
-					<ul class="login_ul clearfix">
-						<li class="active">
-							<p class="bt_p">Returning Customer</p>
-							<form class="login_form lr_form">
-								<label for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email1" type="text" />
-									<p class="ts_p">The email address you entered is incorrect</p>
-								</label>
-								<label for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass1" type="password"/>
-									<p class="ts_p">The password you entered is incorrect</p>
-									<a href="###">Forgotten Password ?</a>
-								</label>
-								<input class="tj_input" type="submit" value="SIGN IN" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
+				<div class="shop_text clearfix">
+					<ul class="shop_ul">
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
-							<p class="bt_p">New Customers</p>
-							<form class="res_form lr_form">
-								<label class="clearfix label_name" for="">
-									<span>First Name <i class="red_i">*</i></span>
-									<input class="name name1" type="text" value="" />
-									<p class="ts_p">Please enter your first name</p>
-								</label>
-								<label class="clearfix label_names" for="">
-									<span>Last Name <i class="red_i">*</i></span>
-									<input class="name name2" type="text" value="" />
-									<p class="ts_p">Please enter your last name</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email2"  type="text"/>
-									<p class="ts_p">Please enter your email address</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass2" type="password"/>
-									<p class="ts_p">Please enter your password</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Confirm Password <i class="red_i">*</i></span>
-									<input class="pass pass3" type="password"/>
-									<p class="ts_p">Please confirm the password</p>
-								</label>
-								<div class="xy_div">
-									<input type="checkbox"/>
-									<span class="span1"></span>
-									<span class="span2"></span>
-									<p>I agree to Hot Beauty Hair <a href="###">Terms and Conditions.</a><i class="red_i">*</i></p>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
 								</div>
-								<p class="xy_p">*required field</p>
-								
-								<input class="tj_input" type="submit" value="SIGN UP" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
-					</ul>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
+						<li>
+							<a class="one_a" href="###">
+								<div class="pic_img">
+									<img src="img/jpg/product1.jpg"/>
+								</div>
+								<div class="text clearfix">
+									<span>$35.30</span>
+									<p class="p1">Silky Straight</p>
+									<p>10"-30" Virgin Brazilian Straight Hair </p>
+								</div>
+							</a>
+							<div class="close"></div>
+							<div class="select_div">
+								<button class="select_btn"><span>12in  100g  1pc</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>12in  100g  1pc</li>
+										<li>14in  100g  1pc</li>
+										<li>16in  100g  1pc</li>
+										<li>18in  100g  1pc</li>
+										<li>20in  100g  1pc</li>
+										<li>22in  100g  1pc</li>
+										<li>24in  100g  1pc</li>
+										<li>26in  100g  1pc</li>
+										<li>28in  100g  1pc</li>
+										<li>30in  100g  1pc</li>
+									</ul>
+								</div>
+							</div>
+							<div class="shop_a">
+								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+							</div>
+						</li>
 					
+					</ul>
 				</div>
 			</div>
 		</div>
-	
-	
+		
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -464,118 +658,49 @@
 			</ol>
 		</div>
 		
-	
 	</body>
 </html>
+
 <script>
 	$(function(){
-		$(".email").focus(function(){
-			$(this).attr("placeholder","Enter email address");
-		})
-		$(".email").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		$(".pass").focus(function(){
-			$(this).attr("placeholder","Please enter the password");
-		})
-		$(".pass").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		
-		$(".name").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z]+$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("Please fill in in English");
+		//下拉选择
+		var off = 0;
+		$(".select_btn").click(function(){
+			if($(this).hasClass("off")){
+				$(this).removeClass("off");
+				$(this).siblings(".select_ul").stop().slideUp();
+				off=0;
 			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".email").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The email address you entered is incorrect");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass").change(function(){
-			var text=$(this).val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass3").change(function(){
-			var text=$(this).val();
-			var pass_val = $(".pass2").val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else if(text!=pass_val){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The passwords you entered are not consistent. Please re-enter them");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		
-		//注册提交
-		$(".res_form .tj_input").click(function(){
-			var name1 = $(".name1").val();
-			var name2 = $(".name2").val();
-			var email2 = $(".email2").val();
-			var pass2 = $(".pass2").val();
-			var pass3 = $(".pass3").val();
-			var bool = 0;
+				$(".select_btn").removeClass("off");
+				$(".select_ul").stop().slideUp();
 			
-			$(".res_form .ts_p").each(function(){
-				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			if(bool == 1){
-				return false;
-			}else{
-				if((name1 !="")&&(name2 !="")&&(email2 !="")&&(pass2 !="")&&(pass3 !="")&&($(".xy_div input").hasClass("off"))){
-					//正确
-				}else{
-					alert("* required field")
-					return false;
+				$(this).addClass("off");
+				$(this).siblings(".select_ul").stop().slideDown();
+				off=1;
+			}
+			 event.stopPropagation();
+		})
+		$(".shop_content .select_ul li").click(function(){
+			var val = $(this).text();
+			$(this).parents(".select_div").find(".select_btn span").text(val);
+			$(".select_btn").removeClass("off");
+			$(".select_ul").stop().slideUp();
+		})
+		$("body").click(function(e){
+			if(off==1){
+				var close = $('.select_div .select_ul'); 
+			   	if(!close.is(e.target) && close.has(e.target).length === 0){
+			      	$(".select_btn").removeClass("off");
+					$(".select_ul").stop().slideUp();
+					off=0;
 				}
 			}
 		})
 		
-		//登陆提交
-		$(".login_form .tj_input").click(function(){
-			var email1 = $(".email1").val();
-			var pass1 = $(".pass1").val();
-			var bool = 0;
-			
-			$(".login_form .ts_p").each(function(){
-				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			
-			if(bool == 1){
-				return false;
-			}else{
-				if((email1 !="")&&(pass1 !="")){
-					//正确
-				}else{
-					alert("* required field")
-					return false;
-				}
-			}
+		//删除当前li
+		$(".shop_content .shop_ul .close").click(function(){
+			$(this).parents("li").remove()
 		})
-		
 	})
 </script>
+		
