--- a/catalog/view/theme/default/shopcart2.html
+++ b/catalog/view/theme/default/shopcart2.html
@@ -8,13 +8,12 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>LOGIN</title>
+		<title>SHOPCART2</title>
 	</head>
 	<body>
 		<!--头部-->
 		<div class="big_nav">
 			<div class="nav content clearfix">
-				
 				<!--货币切换-->
 				<div class="mn_type">
 					<div class="top clearfix">
@@ -205,90 +204,139 @@
 			</div>
 		
 		</div>
-		<!--banner-->
-		
-		
-		<div class="login in_content clearfix">
-			<div class="text clearfix">
-				<div class="top">
-					<ol class="login_ol clearfix">
-						<li class="active">SIGN IN <span></span></li>
-						<li>SIGN UP</li>
-					</ol>
+		<!--内容-->
+		<div class="shopcart2 clearfix">
+			<div class="content in_content shop2_content clearfix">
+				<div class="top clearfix">
+					<h1>MY WISHLIST</h1>
+					<a href="###">Continue Shopping</a>
 				</div>
-				<div class="bot">
-					<ul class="login_ul clearfix">
-						<li class="active">
-							<p class="bt_p">Returning Customer</p>
-							<form class="login_form lr_form">
-								<label for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email1" type="text" />
-									<p class="ts_p">The email address you entered is incorrect</p>
+				
+				<div class="shop2_text clearfix">
+					<div class="left">
+						<label for="" class="qx_label">
+							<span>ALL</span>
+							<input class="check_input" type="checkbox" />
+							<i class="check_i"></i>
+						</label>
+						<ul class="shop2_ul">
+							<li class="clearfix">
+								<label for="" class="dx_label">
+									<input class="check_input"  type="checkbox" />
+									<i class="check_i"></i>
 								</label>
-								<label for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass1" type="password"/>
-									<p class="ts_p">The password you entered is incorrect</p>
-									<a href="###">Forgotten Password ?</a>
-								</label>
-								<input class="tj_input" type="submit" value="SIGN IN" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
-							</div>
-						</li>
-						<li>
-							<p class="bt_p">New Customers</p>
-							<form class="res_form lr_form">
-								<label class="clearfix label_name" for="">
-									<span>First Name <i class="red_i">*</i></span>
-									<input class="name name1" type="text" value="" />
-									<p class="ts_p">Please enter your first name</p>
-								</label>
-								<label class="clearfix label_names" for="">
-									<span>Last Name <i class="red_i">*</i></span>
-									<input class="name name2" type="text" value="" />
-									<p class="ts_p">Please enter your last name</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>E-Mail Address <i class="red_i">*</i></span>
-									<input class="email email2"  type="text"/>
-									<p class="ts_p">Please enter your email address</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Password <i class="red_i">*</i></span>
-									<input class="pass pass2" type="password"/>
-									<p class="ts_p">Please enter your password</p>
-								</label>
-								<label class="clearfix" for="">
-									<span>Confirm Password <i class="red_i">*</i></span>
-									<input class="pass pass3" type="password"/>
-									<p class="ts_p">Please confirm the password</p>
-								</label>
-								<div class="xy_div">
-									<input type="checkbox"/>
-									<span class="span1"></span>
-									<span class="span2"></span>
-									<p>I agree to Hot Beauty Hair <a href="###">Terms and Conditions.</a><i class="red_i">*</i></p>
+								<div class="pic_img">
+									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
 								</div>
-								<p class="xy_p">*required field</p>
-								
-								<input class="tj_input" type="submit" value="SIGN UP" />
-							</form>
-							<div class="zzc_li">
-								<img src="img/loading.gif"/>
-								<p>Sending an email, it may take a few seconds, please wait</p>
-							</div>
-						</li>
-					</ul>
-					
+								<div class="text">
+									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
+									<p><span>Color:</span> Natural Black</p>
+									<p><span>Length:</span> 12inch</p>
+									<p><span>Commodity code:</span> xhs00245</p>
+								</div>
+								<div class="price clearfix">
+									<p>$35.65<span>$35.65</span></p>
+								</div>
+								<div class="pre_div">
+									<div class="num_div">
+										<span class="sub"></span>
+										<input class="num" type="text" value="1" />
+										<span class="add"></span>
+									</div>
+								</div>
+								<div class="close"></div>
+								<span class="wishlist">Move to Wishlist</span>
+							</li>
+							<li class="clearfix">
+								<label for="" class="dx_label">
+									<input class="check_input"  type="checkbox" />
+									<i class="check_i"></i>
+								</label>
+								<div class="pic_img">
+									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
+								</div>
+								<div class="text">
+									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
+									<p><span>Color:</span> Natural Black</p>
+									<p><span>Length:</span> 12inch</p>
+									<p><span>Commodity code:</span> xhs00245</p>
+								</div>
+								<div class="price clearfix">
+									<p>$35.65<span>$35.65</span></p>
+								</div>
+								<div class="pre_div">
+									<div class="num_div">
+										<span class="sub"></span>
+										<input class="num" type="text" value="1" />
+										<span class="add"></span>
+									</div>
+								</div>
+								<div class="close"></div>
+								<span class="wishlist">Move to Wishlist</span>
+							</li>
+						</ul>
+					</div>
+				
+					<div class="right">
+						<h2>SUMMARY</h2>
+						<p class="p1">Subtotal <span class="fr">$70.00</span></p>
+						<p class="p2">Total <span class="fr">$70.00</span></p>
+						<div class="shop_search">
+							<p>
+								If you have coupons, please fill them out. If not, 
+								please pay.
+							</p>
+							<label for="">
+								<input type="text" placeholder="coupon code"/>
+								<button>CONFIRM</button>
+							</label>
+						</div>
+						<div class="btn">
+							<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
+						</div>
+					</div>
 				</div>
+				
+				<div class="bot clearfix">
+					<dl>
+						<dt>Delivery dates</dt>
+						<dd class="pc_dd">
+							We ship by FedEx, DHL express and local express.<br />
+							You can expect to get these items within <br />
+							5-7 days. <a href="###">More information&nbsp;&nbsp;>></a>
+						</dd>
+						<dd class="yd_dd">
+							Shopping on Hot Beauty Hair.com is safe and secure 
+							- guaranteed!
+						</dd>
+						
+					</dl>
+					<dl>
+						<dt>Satisfaction Guaranteed </dt>
+						<dd>
+							Hot Beauty Hair.com cares about your complete 
+							satisfaction. We offer a comprehensive return policy 
+							on all items, allowing you to shop with confidence.
+						</dd>
+					</dl>
+					<dl>
+						<dt>Privacy Policy</dt>
+						<dd class="pc_dd">
+							Hot Beauty Hair.com respects your privacy.<br />
+							We do NOT share or in any way distribute 
+							any personal, business or contact information 
+							you may provide. <a href="###">See Our Return Policy&nbsp;&nbsp;>></a>
+						</dd>
+						<dd class="yd_dd">
+							Hot Beauty Hair.com respects your privacy.We do NOT share 
+							or in any way distribute any personal, business or contact 
+							information you may provide.
+						</dd>
+					</dl>
+				</div>
+				
 			</div>
 		</div>
-	
-	
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -464,118 +512,97 @@
 			</ol>
 		</div>
 		
-	
 	</body>
 </html>
+
 <script>
 	$(function(){
-		$(".email").focus(function(){
-			$(this).attr("placeholder","Enter email address");
-		})
-		$(".email").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		$(".pass").focus(function(){
-			$(this).attr("placeholder","Please enter the password");
-		})
-		$(".pass").blur(function(){
-			$(this).attr("placeholder","");
-		})
-		
-		$(".name").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z]+$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("Please fill in in English");
+		//全选
+		$(".qx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				$(".dx_label input").each(function(){
+					$(this).prop("checked",true);
+					$(this).siblings(".check_i").addClass("active");
+				})
 			}else{
-				$(this).siblings(".ts_p").removeClass("off");
+				$(this).siblings(".check_i").removeClass("active");
+				$(".dx_label input").each(function(){
+					$(this).prop("checked","");
+					$(this).siblings(".check_i").removeClass("active");
+				})
 			}
 		})
-		$(".email").change(function(){
-			var text=$(this).val();
-			var re=/^[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$/;
-			if(!re.test(text) && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The email address you entered is incorrect");
+		//单选
+		$(".dx_label input").click(function(){
+			if($(this).prop("checked")){
+				$(this).siblings(".check_i").addClass("active");
+				var len = $(".dx_label .check_i").length;
+				var i=0;
+				$(".dx_label .check_i").each(function(){
+					if($(this).hasClass("active")){
+						i++
+					}
+					return i;
+				})
+				if(i>=len){
+					$(".qx_label input").prop("checked",true);
+					$(".qx_label .check_i").addClass("active");
+				}
+				
 			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass").change(function(){
-			var text=$(this).val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
-			}
-		})
-		$(".pass3").change(function(){
-			var text=$(this).val();
-			var pass_val = $(".pass2").val();
-			if(text.length<6 && text !=""){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The password must be longer than 6 letters");
-			}else if(text!=pass_val){
-				$(this).siblings(".ts_p").addClass("off");
-				$(this).siblings(".ts_p").text("The passwords you entered are not consistent. Please re-enter them");
-			}else{
-				$(this).siblings(".ts_p").removeClass("off");
+				$(this).siblings(".check_i").removeClass("active");
+				$(".qx_label .check_i").removeClass("active");
+				$(".qx_label input").prop("checked","");
 			}
 		})
 		
-		//注册提交
-		$(".res_form .tj_input").click(function(){
-			var name1 = $(".name1").val();
-			var name2 = $(".name2").val();
-			var email2 = $(".email2").val();
-			var pass2 = $(".pass2").val();
-			var pass3 = $(".pass3").val();
-			var bool = 0;
-			
-			$(".res_form .ts_p").each(function(){
+		//		数量
+		$(".sub").click(function(){
+			var num  = $(".num").val();
+			if(num>1){
+				num--;
+				 $(".num").val(num);
+			}
+		})
+		$(".add").click(function(){
+			var num  = $(".num").val();
+			num++;
+			 $(".num").val(num);
+		})
+		
+		//收藏
+		$(".wishlist").click(function(){
+			var win = $(window).width();
+			if(win>992){
 				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			if(bool == 1){
-				return false;
-			}else{
-				if((name1 !="")&&(name2 !="")&&(email2 !="")&&(pass2 !="")&&(pass3 !="")&&($(".xy_div input").hasClass("off"))){
-					//正确
+					$(this).removeClass("off");
+					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
 				}else{
-					alert("* required field")
-					return false;
+					$(this).addClass("off");
+					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
 				}
-			}
-		})
-		
-		//登陆提交
-		$(".login_form .tj_input").click(function(){
-			var email1 = $(".email1").val();
-			var pass1 = $(".pass1").val();
-			var bool = 0;
-			
-			$(".login_form .ts_p").each(function(){
+			}else{
 				if($(this).hasClass("off")){
-					bool=1;
-					return bool;
-				}
-			})
-			
-			if(bool == 1){
-				return false;
-			}else{
-				if((email1 !="")&&(pass1 !="")){
-					//正确
+					$(this).removeClass("off");
+					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
 				}else{
-					alert("* required field")
-					return false;
+					$(this).addClass("off");
+					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
 				}
 			}
+			
 		})
 		
+		//删除
+		$(".shopcart2 .close").click(function(){
+			$(this).parents("li").remove();
+		})
+		
+		//搜索
+		$(".shop_search input").focus(function(){
+			$(".shop_search button").css("display","block");
+		})
 	})
 </script>
+		
