--- a/catalog/view/theme/default/product.html
+++ b/catalog/view/theme/default/product.html
@@ -221,7 +221,7 @@
 					<ul class="pro_ul">
 						<li>
 							<a href="###">
-								<div class="pic_img" style="background:block;">
+								<div class="pic_img">
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
@@ -234,7 +234,7 @@
 						</li>
 						<li>
 							<a href="###">
-								<div class="pic_img" style="background:red;">
+								<div class="pic_img">
 									<img src="img/jpg/product1.jpg"/>
 								</div>
 								<div class="text clearfix">
@@ -429,7 +429,6 @@
 						</li>
 					</ul>
 				</div>
-				<!-- 分页 -->
 				<div class="bot clearfix">
 					<div class="left">
 						<ul>
@@ -448,7 +447,6 @@
 						<p>Double Drawn Funmi Hair [<span>24</span>]</p>
 					</div>
 				</div>
-				<!-- 分页 -->
 			</div>
 		</div>
 		
